# pythonProject

./: Dockerfile  pyproject.toml
app/: main.py
